--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,13 @@ body{
     margin-top: 150px;
 }
 
+.neco-f{
+    border-bottom: solid 1px #674e47;
+    width: 454px;
+    margin-bottom: 97px;
+    margin-top: -20px;
+}
+
 .bunsyou-top{
     width: 454px;
     margin-bottom: 97px;
