--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,7 @@ body{
     width: 123px;
     margin-left: 300px;
     margin-top: 150px;
+    margin-bottom: 50px;
 }
 
 .bunsyou-main{
@@ -275,6 +276,7 @@ padding-top: 50px;
 /* タイトル */
 
 .border-clear{
+    display: block;
     border: solid 1px #afa6a5;
     height: 60px;
     width: 81.50vw;
@@ -292,6 +294,7 @@ padding-top: 50px;
 }
 
 .border-square{
+    display: block;
     background-color: #ccc4c2;
     height: 60px;
     max-width: 80.52vw;
