--- a/css/style.css
+++ b/css/style.css
@@ -428,32 +428,38 @@ padding-top: 50px;
 
 /* スライド */
 
-.slide{
-    margin-top: 41px;
-    padding-bottom: 50px;
+.slide-bun::before,
+.slide-bun::after {
+  background-color: #674e47; /* 横線の色 */
+  content: "";
+  flex-grow: 1; /* 横幅いっぱい */
+  height: 1px; /* 横線の高さ */
+}
+.slide-bun::before {
+  margin-right: 15px; /* 文字との余白 */
+}
+.slide-bun::after {
+  margin-left: 15px; /* 文字との余白 */
+}
+/* レイアウトのためのcss */
+h2 {
+  color: #333;
+  font-size: 20px;
+  font-weight: 700;
+  padding-bottom: 20px;
+  padding-top: 20px;
+}
+.slide {
+  background-color: #fff;
+  margin-inline: auto;
+  width: 90%;
+  margin-top: 41px;
+  padding-bottom: 50px;
 }
 
-.slide p{
-    text-align: center;
-    padding: 10px 0 0 10px;
-    position: absolute;
-    text-align: center;
-    z-index: 50;
-}
-
-.haikei{
-    width: 50px;
-    height: 30px;
-    background-color: #fff;
-    margin: 0 auto;
-    position: relative;
-    z-index: 15;
-}
-
-.slide hr{
-    border: solid 1px #afa6a5;
-    margin-top: -10px;
-    z-index: 10;
+.slide-bun{
+    align-items: center;
+    display: flex;
 }
 
 /* フォト */
