--- a/css/style.css
+++ b/css/style.css
@@ -287,6 +287,7 @@ padding-top: 50px;
 .border-square span{
     font-size: 20px;
     font-family: "skia";
+    font-weight: 400;
     letter-spacing: 5px;
     position: absolute;
     right: 40px;
