--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ dd {
     line-height: 1;
     font-weight: 400;
     font-feature-settings: "palt";
-    font-family: fot-tsukuardgothic-std, sans-serif;
+    font-family: "fot-tsukuardgothic-std", sans-serif,"dnp-shuei-mgothic-std", sans-serif;
     font-weight: 400;
     font-style: normal;
 }
