--- a/css/style.css
+++ b/css/style.css
@@ -525,7 +525,9 @@ h2 {
 
 .footer-frame ul li{
     margin-top: 88px;
-    font-family: "skia";
+    font-family: "amatic-sc", sans-serif;
+    font-weight: 700;
+    font-style: normal;
 }
 
 .sns-icon{
