--- a/css/style.css
+++ b/css/style.css
@@ -290,8 +290,9 @@ padding-top: 50px;
 
 .border-square span{
     font-size: 20px;
-    font-family: "skia";
+    font-family: "amatic-sc", sans-serif;
     font-weight: 400;
+    font-style: normal;
     letter-spacing: 5px;
     position: absolute;
     right: 40px;
@@ -526,7 +527,7 @@ h2 {
 .footer-frame ul li{
     margin-top: 88px;
     font-family: "amatic-sc", sans-serif;
-    font-weight: 700;
+    font-weight: 400;
     font-style: normal;
 }
 
