--- a/css/style.css
+++ b/css/style.css
@@ -1303,9 +1303,10 @@ input[type="text"]:focus{
         margin-top: 60px;
     }
 
-    .to-top img{
-        width: 80px;
-        right: 30px;
+    .to-top {
+        bottom: 65px;
+        right: 10px;
+        width: 100px;
     }
 
     /* アバウトページ */
@@ -1638,22 +1639,6 @@ input[type="text"]:focus{
     .loader{
         display: none;
     }
-
-    /* .sp-loader{
-        display: block;
-        background: #fff;
-        width: 100%;
-        height: 100vh;
-        position: fixed;
-        top: 0;
-        left: 0;
-        z-index: 1000;
-    }
-    
-    .sp-loader img{
-        height: 100%;
-        object-fit: cover;
-    } */
 
     .sp-loader{
         object-fit: cover;
