--- a/css/style.css
+++ b/css/style.css
@@ -1457,6 +1457,9 @@ input[type="text"]:focus{
         margin-left: 12%;
         font-family: 'skia';
         letter-spacing: 1px;
+        font-family: "amatic-sc", sans-serif;
+        font-weight: 700;
+        font-style: normal;
     }
 
     .mockup-title p{
