--- a/css/style.css
+++ b/css/style.css
@@ -531,6 +531,7 @@ h2 {
     font-family: "amatic-sc", sans-serif;
     font-weight: 700;
     font-style: normal;
+    letter-spacing: 3px;
 }
 
 .sns-icon{
