--- a/css/style.css
+++ b/css/style.css
@@ -1645,6 +1645,7 @@ input[type="text"]:focus{
         font-family: "amatic-sc", sans-serif;
         font-weight: 700;
         font-style: normal;
+        letter-spacing: 3px;
     }
 
     /* ローディング画面 */
