--- a/css/style.css
+++ b/css/style.css
@@ -528,6 +528,7 @@ h2 {
 
 .footer-frame ul li{
     margin-top: 88px;
+    font-size: 23px;
     font-family: "amatic-sc", sans-serif;
     font-weight: 700;
     font-style: normal;
