--- a/css/style.css
+++ b/css/style.css
@@ -862,7 +862,7 @@ a{
 .sakuhin-syousai{
     margin: 0 auto 90px;
     width: 200px;
-    padding: 15px 30px;
+    padding: 0 30px;
     border: solid 3px #674e47;
     border-left: 0;
     border-right: 0;
