--- a/css/style.css
+++ b/css/style.css
@@ -564,6 +564,12 @@ h2 {
     display: none;
 }
 
+.sp-to-top{
+    display: none;
+}
+
+/* トップへきたら非表示 */
+
 @media (min-height:800px){
     body:target .to-top{
         display: block;
@@ -1319,10 +1325,15 @@ input[type="text"]:focus{
         margin-top: 60px;
     }
 
-    .to-top {
+    .to-top{
+        display: none;
+    }
+
+    .sp-to-top {
         bottom: 65px;
         right: 10px;
         width: 100px;
+        display: block;
     }
 
     /* アバウトページ */
