--- a/css/style.css
+++ b/css/style.css
@@ -1328,11 +1328,12 @@ input[type="text"]:focus{
         margin-top: 60px;
     }
 
-    .to-top{
+    .pc-to-top{
         display: none;
     }
 
     .sp-to-top {
+        position: fixed;
         bottom: 65px;
         right: 10px;
         width: 100px;
