--- a/css/style.css
+++ b/css/style.css
@@ -792,6 +792,13 @@ h2 {
     padding: 15px;
 }
 
+.work-list span{
+    font-size: 14px;
+    font-family: "fot-tsukuardgothic-std", sans-serif,"dnp-shuei-mgothic-std", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
 .mockup-w{
     padding-bottom: 100px;
 }
