--- a/css/style.css
+++ b/css/style.css
@@ -792,13 +792,6 @@ h2 {
     padding: 15px;
 }
 
-.work-list span{
-    font-size: 14px;
-    font-family: "fot-tsukuardgothic-std", sans-serif,"dnp-shuei-mgothic-std", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-}
-
 .mockup-w{
     padding-bottom: 100px;
 }
@@ -827,6 +820,13 @@ a{
     background-color: #c6beba;
     position: absolute;
     right: 0;
+}
+
+.mockup-title span{
+    font-size: 14px;
+    font-family: "fot-tsukuardgothic-std", sans-serif,"dnp-shuei-mgothic-std", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 .sp-title{
