--- a/css/style.css
+++ b/css/style.css
@@ -1507,7 +1507,7 @@ input[type="text"]:focus{
         font-style: normal;
     }
 
-    .mockup-title span{
+    .sp-title span{
         font-size: 14px;
         font-family: "fot-tsukuardgothic-std", sans-serif,"dnp-shuei-mgothic-std", sans-serif;
         font-weight: 400;
