--- a/css/style.css
+++ b/css/style.css
@@ -877,7 +877,7 @@ a{
     margin: 0 auto 90px;
     width: 227px;
     padding: 0 20px;
-    border: solid 2px #674e47;
+    border: solid 3px #afa6a5;
     border-left: 0;
     border-right: 0;
 }
