--- a/css/style.css
+++ b/css/style.css
@@ -819,7 +819,7 @@ h2 {
     color: #fff;
 }
 
-.mockup-gazou p span{
+.mockup-gazou p img span{
     position: absolute;
     left: 50%;
     top: 50%;
