--- a/css/style.css
+++ b/css/style.css
@@ -826,6 +826,14 @@ h2 {
     transition: all .5s;
 }
 
+.mockup-gazou a span:nth-child(1){
+    opacity: 0;
+}
+
+.mockup-gazou a:hover span:nth-child(1){
+    opacity: 1;
+}
+
 a{
     color: #674e47;
 }
