--- a/css/style.css
+++ b/css/style.css
@@ -827,6 +827,9 @@ h2 {
     opacity: 0;
 }
 
+.mockup-gazou p span:hover{
+    opacity: 1;
+}
 
 /* .mockup-gazou p span:nth-child(1){
     opacity: 0;
