--- a/css/style.css
+++ b/css/style.css
@@ -114,12 +114,21 @@ body{
 }
 
 .scroll-foot{
-    font-size: 16px;
+    /* font-size: 16px;
     width: 5%;
     text-align: center;
     position: absolute;
     left: 46.5%;
-    bottom: 14%;
+    bottom: 14%; */
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 20px;
+    width: 2px;
+    height: 40px;
+    background: #2b2b2b;
+    animation: pathmove 1.4s ease-in-out infinite;
+    opacity: 0;
 }
 
 /* ナビメニュー */
