--- a/css/style.css
+++ b/css/style.css
@@ -120,15 +120,30 @@ body{
     position: absolute;
     left: 46.5%;
     bottom: 14%; */
-    content: "";
+    width: 5%;
+    text-align: center;
     position: absolute;
-    top: 0;
-    left: 20px;
-    width: 2px;
-    height: 40px;
-    background: #2b2b2b;
+    left: 46.5%;
+    bottom: 14%;
     animation: pathmove 1.4s ease-in-out infinite;
     opacity: 0;
+}
+
+@keyframes pathmove{
+    0%{
+        height: 0;
+        top: 0;
+        opacity: 0;
+    }
+    30%{
+        height: 30px;
+        opacity: 1;
+    }
+    100%{
+        height: 0;
+        top: 50px;
+        opacity: 0;
+    }
 }
 
 /* ナビメニュー */
