--- a/css/style.css
+++ b/css/style.css
@@ -814,6 +814,11 @@ h2 {
     padding-bottom: 100px;
 }
 
+.ear{
+    width: 500px;
+    margin-left: 20%;
+}
+
 .mockup-gazou img{
     width: 500px;
     border: solid 1px #ddd7d3;
