--- a/css/style.css
+++ b/css/style.css
@@ -1506,6 +1506,11 @@ input[type="text"]:focus{
         margin-left: 0;
     }
 
+    .ear{
+        width: 280px;
+        margin: 0 12.67%;
+    }
+
     .mockup-gazou img{
         width: 280px;
         margin: 0 12.67%;
