--- a/css/style.css
+++ b/css/style.css
@@ -1501,7 +1501,7 @@ input[type="text"]:focus{
 
     .mockup-gazou{
         display: block;
-        padding: 30px 0;
+        padding: 0 0 30px;
         position: relative;
         margin-left: 0;
     }
