--- a/css/style.css
+++ b/css/style.css
@@ -1506,8 +1506,10 @@ input[type="text"]:focus{
         margin-left: 0;
     }
 
-    .ear{
+    .ear img{
         width: 280px;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .mockup-gazou img{
