--- a/css/style.css
+++ b/css/style.css
@@ -1512,9 +1512,9 @@ input[type="text"]:focus{
         margin: 0 12.67%;
     }
 
-    .mockup-gazou img{
+    .mockup-gazou p{
         width: 280px;
-        margin: 0 12.67%;
+        margin: 0 auto;
     }
 
     .mockup-title{
