--- a/css/style.css
+++ b/css/style.css
@@ -1542,8 +1542,9 @@ input[type="text"]:focus{
     }
 
     .sp-title h2{
+        width: 280px;
         text-align: left;
-        margin-left: 12%;
+        margin-left: 0 auto;
         font-size: 30px;
         letter-spacing: 3px;
         font-family: "amatic-sc", sans-serif;
