--- a/css/style.css
+++ b/css/style.css
@@ -1519,6 +1519,10 @@ input[type="text"]:focus{
         margin-left: 0;
     }
 
+    .mockup-gazou p span{
+        display: none;
+    }
+
     .ear{
         width: 280px;
         margin: 0 auto;
