--- a/css/style.css
+++ b/css/style.css
@@ -1785,6 +1785,7 @@ input[type="text"]:focus{
     }
 
     .sp-loader{
+        display: block;
         object-fit: cover;
         width: 100%;
     }
