--- a/css/style.css
+++ b/css/style.css
@@ -1275,9 +1275,14 @@ input[type="text"]:focus{
         margin: 200px 0;
     }
 
+    .nigaoe{
+        width: 200px;
+        margin: 0 auto;
+    }
+
     .sp-name{
         text-align: center;
-        padding: 45px 0;
+        padding: 30px 0;
     }
 
     .syoukaibun{
