--- a/css/style.css
+++ b/css/style.css
@@ -1272,7 +1272,7 @@ input[type="text"]:focus{
 
     .sp-about{
         display: block;
-        margin: 200px 0;
+        margin: 200px 10px;
     }
 
     .nigaoe{
